Update openings and publications

--- a/COIN/opening.html
+++ b/COIN/opening.html
@@ -36,6 +36,12 @@ You can get a sense of the style of our work by looking at <a href="../publicati
 <p><div id="Openings"></p>
 <h2>Openings</h2>
 <ul>
+<li><p>Ireland Postdoctoral Fellowship Programme by the <a href="https://research.ie/funding/goipd/">Government of Ireland</a>. <br />
+Deadline:  12 October 2023. <br />
+<b>Note</b>: Interested canddiates should contact me earlier to discuss our research interests and prepare the proposal. </p>
+</li>
+</ul>
+<ul>
 <li><p>Postgraduate Scholarship Programme by the <a href="https://research.ie/funding/goipg/">Government of Ireland</a>. <br />
 Deadline:  12 October 2023. <br />
 <b>Note</b>: Interested canddiates should contact me earlier to discuss our research interests and prepare the proposal. </p>
@@ -79,7 +85,7 @@ Deadline: 24 March 2023. <b>Closed</b></p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-07 12:11:22 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-16 11:03:10 GMT Daylight Time.
 </div>
 </div>
 </td>
