--- a/activity.html
+++ b/activity.html
@@ -42,6 +42,8 @@
 <p><div id="Guest Editor"></p>
 <h2>Guest Editor</h2>
 <ul>
+<li><p><a href="https://www.comsoc.org/publications/magazines/ieee-internet-things-magazine">IEEE Internet of Things Magazine</a>, Federated Learning for the Industrial Internet of Things (IIoT), 2023.</p>
+</li>
 <li><p><a href="https://ctsoc.ieee.org/images/TCE_FILES/TCE_SS_CFP_Federated_learning_for_personalized_recommendation_of_consumer_electronics.pdf">IEEE Transactions on Consumer Electronics</a>, Federated Learning for Personalized Recommendation of Consumer Electronics, 2023.</p>
 </li>
 <li><p><a href="https://www.sciencedirect.com/journal/computer-communications/about/call-for-papers">Computer Communications</a>, Intelligent Device-free Sensing for Future Internet of Things: Emerging Trends and Challenges, 2023.</p>
@@ -156,7 +158,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-07-16 12:47:59 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-16 11:11:58 GMT Daylight Time.
 </div>
 </div>
 </td>
