--- a/publication.html
+++ b/publication.html
@@ -83,7 +83,7 @@
 </li>
 <li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2308.04953">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
-<li><p>M. Le, T. Huynh-The, T. Do-Duy, T.-H. Vu, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Applications of Distributed Machine Learning for Future IoT: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
+<li><p>M. Le, T. Huynh-The, T. Do-Duy, T.-H. Vu, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Applications of Distributed Machine Learning for the Internet-of-Things: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, and S. Kim, &ldquo;<a href="">THz-based Rate-Splitting Multiple-Access (RSMA): Is It Always Better Than NOMA?</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
@@ -106,7 +106,7 @@
 <p><div id="2023 and Early Access"></p>
 <h2>2023 and Early Access</h2>
 <ol>
-<li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="https://arxiv.org/abs/2304.00524">Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
+<li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="https://ieeexplore.ieee.org/document/10215363">Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
 <li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2023.3296319">Physical Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
@@ -316,11 +316,11 @@
 <ol>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Performance Analysis of RSMA-aided UAV-to-Ground Communications</a>,&rdquo; <i>IEEE Global Communications Conference (GLOBECOM)</i>, Kuala Lumpur, Malaysia, 2023.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-H. Vu, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="">Intelligent Spectrum Sensing with ConvNet for 5G and LTE Signals Identification</a>,&rdquo; <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-H. Vu, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10208054">Intelligent Spectrum Sensing with ConvNet for 5G and LTE Signals Identification</a>,&rdquo; <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="">An Efficient Deep Network for Modulation Classification in Impaired MIMO-OFDM Systems</a>,&rdquo;<i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10208038">An Efficient Deep Network for Modulation Classification in Impaired MIMO-OFDM Systems</a>,&rdquo;<i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
 </li>
-<li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, T. Huynh-The, D. B. da Costa, V. N. Q. Bao, and S. Kim, &ldquo;<a href="">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
+<li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, T. Huynh-The, D. B. da Costa, V. N. Q. Bao, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10207980">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
 </li>
 <li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, and V. J. Reddi, &ldquo;<a href="http://dx.doi.org/10.1007/978-3-031-36021-3_30">Solving Complex Sequential Decision-Making Problems by Deep Reinforcement Learning with Heuristic Rules</a>,&rdquo; <i>International Conference on Computational Science (ICCS)</i>, Prague, Czech Republic, Jul. 2023.</p>
 </li>
@@ -390,7 +390,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-10 09:32:09 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-16 11:09:10 GMT Daylight Time.
 </div>
 </div>
 </td>
