--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@ Assistant Professor, Ph.D. <br />
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p><a href="./COIN/opening.html"><font color=red size=+0.5><b>Openning!</b></font></a> Applicants are invited to join my COIN-Lab@TCD under Postgraduate Scholarship and Postdoctoral Fellowship Programs of the Government of Ireland. </p>
+</li>
 <li><p>[08/2023] I have been appointed as the Demonstrator and Teaching Assistant Director of TCD SCSS.</p>
 </li>
 <li><p>[07/2023] <font color=red size=+0.5>Hot!</font> I have been invited to join the editorial board of the IEEE Communications Letters.</p>
@@ -94,6 +96,8 @@ Assistant Professor, Ph.D. <br />
 <p><div id="Selected Publication"></p>
 <h2>Selected Publication <a href="publication.html">(<font color=red size=+0.5><b>Full Publication</b></font></a>)</h2>
 <ol>
+<li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and Q.-V. Pham, &ldquo;<a href="https://arxiv.org/abs/2308.04953">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; 2023.</p>
+</li>
 <li><p>M.-D. Nguyen, Q.-V. Pham, H. T. Dinh, L. Tran-Thanh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://arxiv.org/abs/2209.14520">Label driven Knowledge Distillation for Federated Learning with non-IID Data</a>,&rdquo; 2023.</p>
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, Q.-V. Pham, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, 2023.</p>
@@ -133,13 +137,8 @@ Prior to joining TCD, he was in various academic positions with Kyung Hee Univer
 <p>He specialises in applying convex optimisation, game theory, and machine learning to analyse and optimise cloud edge computing, wireless networks, and IoT systems. 
 Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). 
 He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. 
-He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, 
-the Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, 
-and the Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, 
-a co-recipient of an IEEE ATC Best Paper Award in 2022,
-and Enterprise Ireland Coordination Support Award in 2023. 
-He is an Editor of IEEE Communications Letters, Journal of Network and Computer Applications and Scientific Reports, 
-and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
+He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, IEEE ATC Best Paper Award in 2022, and Enterprise Ireland Coordination Support Award in 2023. 
+He is an Editor of IEEE Communications Letters, Journal of Network and Computer Applications and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
 <p></div></p>
 <p><div id="About Me"></p>
 <h2>About Me</h2>
@@ -150,7 +149,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-05 09:53:01 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-16 11:13:00 GMT Daylight Time.
 </div>
 </div>
 </td>
