--- a/activity.html
+++ b/activity.html
@@ -42,11 +42,11 @@
 <p><div id="Guest Editor"></p>
 <h2>Guest Editor</h2>
 <ul>
-<li><p><a href="https://www.comsoc.org/publications/magazines/ieee-internet-things-magazine">IEEE Internet of Things Magazine</a>, Federated Learning for the Industrial Internet of Things (IIoT), 2023.</p>
+<li><p><a href="https://www.comsoc.org/publications/magazines/ieee-internet-things-magazine/cfp/federated-learning-industrial-internet">IEEE Internet of Things Magazine</a>, Federated Learning for the Industrial Internet of Things (IIoT), 2023 - Present.</p>
 </li>
-<li><p><a href="https://ctsoc.ieee.org/images/TCE_FILES/TCE_SS_CFP_Federated_learning_for_personalized_recommendation_of_consumer_electronics.pdf">IEEE Transactions on Consumer Electronics</a>, Federated Learning for Personalized Recommendation of Consumer Electronics, 2023.</p>
+<li><p><a href="https://ctsoc.ieee.org/images/TCE_FILES/TCE_SS_CFP_Federated_learning_for_personalized_recommendation_of_consumer_electronics.pdf">IEEE Transactions on Consumer Electronics</a>, Federated Learning for Personalized Recommendation of Consumer Electronics, 2023 - Present.</p>
 </li>
-<li><p><a href="https://www.sciencedirect.com/journal/computer-communications/about/call-for-papers">Computer Communications</a>, Intelligent Device-free Sensing for Future Internet of Things: Emerging Trends and Challenges, 2023.</p>
+<li><p><a href="https://www.sciencedirect.com/journal/computer-communications/about/call-for-papers">Computer Communications</a>, Intelligent Device-free Sensing for Future Internet of Things: Emerging Trends and Challenges, 2023 - Present.</p>
 </li>
 <li><p><a href="https://ieee-iotj.org/">IEEE Internet of Things Journal</a>, Lead Guest Editor, Aerial Computing for the Internet-of-Things (IoT), 2021 - 2022.</p>
 </li>
@@ -88,6 +88,10 @@
 <li><p>IEEE Communications Letters</p>
 </li>
 <li><p>IEEE Wireless Communications Letters</p>
+</li>
+<li><p>IEEE Networking Letters</p>
+</li>
+<li><p>IEEE Communications Surveys and Tutorials</p>
 </li>
 <li><p>IEEE Transactions on Communications </p>
 </li>
@@ -158,7 +162,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-16 11:11:58 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-24 11:52:25 GMT Daylight Time.
 </div>
 </div>
 </td>
