--- a/grantaward.html
+++ b/grantaward.html
@@ -70,6 +70,10 @@ Pusan National University</p>
 <p><div id="Awards"></p>
 <h2>Awards and Prizes</h2>
 <ul>
+<li><p>Coordination Support Award, Enterprise Ireland, 2023-2025.</p>
+</li>
+<li><p>TCD School of Computer Science and Statistics Award, 2023-2027.</p>
+</li>
 <li><p>Best paper award, IEEE International Conference on Advanced Technologies for Communications (ATC), 2022.</p>
 </li>
 <li><p>World's top 2% of scientists on Stanford University list, 2021-2022.</p>
@@ -91,7 +95,7 @@ Pusan National University</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-06 13:38:27 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-19 16:34:26 GMT Daylight Time.
 </div>
 </div>
 </td>
