--- a/publication.html
+++ b/publication.html
@@ -230,7 +230,7 @@
 </li>
 <li><p><b>Q.-V. Pham</b>, N. T. Nguyen, T. Huynh-The, L. B. Le, K. Lee, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9448043">Intelligent Radio Signal Processing: A Survey</a>,&rdquo; <i>IEEE Access</i>, vol. 9, pp. 83818-83850, Jun. 2021.</p>
 </li>
-<li><p>B. Prabadevi, N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, P. K. R. Maddikunta, T. R. Gadekallu, P. N. Pathirana, and O. Dobre, &ldquo;<a href="https://ieeexplore.ieee.org/document/9409843">Toward Blockchain for Edge-of-Things: A New Paradigm, Opportunities, and Future Directions</a>,&rdquo; <i>IEEE Internet of Things Magazine</i>, vol. 4, no. 2, pp. 102-108, Jun. 2021.</p>
+<li><p>B. Prabadevi, N. Deepa, <b>Q.-V. Pham</b>, D. C. Nguyen, P. K. R. Maddikunta, T. R. Gadekallu, P. N. Pathirana, and O. A. Dobre, &ldquo;<a href="https://ieeexplore.ieee.org/document/9409843">Toward Blockchain for Edge-of-Things: A New Paradigm, Opportunities, and Future Directions</a>,&rdquo; <i>IEEE Internet of Things Magazine</i>, vol. 4, no. 2, pp. 102-108, Jun. 2021.</p>
 </li>
 <li><p>L. Nkenyereye, J. Y. Hwang, <b>Q.-V. Pham</b>, and J. S. Song, &ldquo;<a href="https://ieeexplore.ieee.org/document/9360665">MEIX: Evolving Multi-Access Edge Computing for Industrial Internet-of-Things Services</a>,&rdquo; <i>IEEE Network</i>, vol. 35, no. 3, pp. 147-153, May/Jun. 2021.</p>
 </li>
@@ -252,7 +252,7 @@
 </li>
 <li><p>F. Figueiredo, M. Facina, R. Ferreira, R. Ruby, <b>Q.-V. Pham</b>, and G. Fraidenraich, &ldquo;<a href="https://ieeexplore.ieee.org/document/9333565">Large Intelligent Surfaces with Discrete Set of Phase-Shifts Communicating Through Double-Rayleigh Fading Channels</a>,&rdquo; <i>IEEE Access</i>, vol. 9, pp. 20768-20787, Jan. 2021.</p>
 </li>
-<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, T.D.T. Nguyen, M. D. Hossain, Y.-R. Shin, and E.-N. Huh, &ldquo;<a href="https://ieeexplore.ieee.org/document/9321325">Joint Computational Offloading and Data-Content Caching in NOMA-MEC Networks</a>,&rdquo; <i>IEEE Access</i>, vol. 9, pp. 12943-12954, Jan. 2021.</p>
+<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, T. D. T. Nguyen, M. D. Hossain, Y.-R. Shin, and E.-N. Huh, &ldquo;<a href="https://ieeexplore.ieee.org/document/9321325">Joint Computational Offloading and Data-Content Caching in NOMA-MEC Networks</a>,&rdquo; <i>IEEE Access</i>, vol. 9, pp. 12943-12954, Jan. 2021.</p>
 </li>
 <li><p>T.-T. Nguyen, V.-D. Nguyen, <b>Q.-V. Pham</b>, and J.-H. Lee, and Y.-H. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9195847">Resource Allocation for AF Relaying Wireless-powered Networks with Nonlinear Energy Harvester</a>,&rdquo; <i>IEEE Communications Letters</i>, vol. 25, no. 1, pp. 229-233, Jan. 2021.</p>
 </li>
@@ -307,7 +307,7 @@
 </li>
 <li><p><b>Q.-V. Pham</b> and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/7426373">Resource Allocation for Heterogeneous Traffic in Complex Communication Networks</a>,&rdquo; <i>IEEE Transactions on Circuits and Systems II: Express Briefs</i>, vol. 63, no. 10, pp. 959-963, Oct. 2016.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, H. To, and W.-J. Hwang, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1389128615002674">A Multi-Timescale Cross-Layer Approach for Wireless Ad Hoc Networks</a>,&rdquo; <i>Computer Networks</i>, vol. 18, pp. 471-482, Sep. 2015.</p>
+<li><p><b>Q.-V. Pham</b>, H.-L. To, and W.-J. Hwang, &ldquo;<a href="https://www.sciencedirect.com/science/article/abs/pii/S1389128615002674">A Multi-Timescale Cross-Layer Approach for Wireless Ad Hoc Networks</a>,&rdquo; <i>Computer Networks</i>, vol. 18, pp. 471-482, Sep. 2015.</p>
 </li>
 </ol>
 <p></div></p>
@@ -390,7 +390,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-16 11:09:10 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-22 09:48:16 GMT Daylight Time.
 </div>
 </div>
 </td>
