--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Assistant Professor, Ph.D. <br />
 <ul>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
-<li><p>Phone: (+353) 083-475-5354</p>
+<li><p>Phone: (+353) 083-x7y-y3yx, where x = 4 and y = 5.</p>
 </li>
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Viet-Pham-46">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
 </li>
@@ -69,11 +69,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>[07/2023] <font color=red size=+0.5>Hot!</font> I have been invited to join the editorial board of the IEEE Communications Letters.</p>
 </li>
-<li><p>[06/2023] I visited the University of Ulsan and Pusan National University (Korea), HUST and PTIT (Vietnam).</p>
-</li>
 <li><p>[05/2023] <font color=red size=+0.5>Hot!</font> I got the Enterprise Ireland Coordination Support Award. </p>
-</li>
-<li><p>[04/2023] I am invited to serve as track chair for <a href="https://soict.org/">SOICT 2023</a>. Submit your high-quality papers and visit HCM City, Vietnam in Dec. 2023. </p>
 </li>
 <li><p>[01/2023] I have joined <a href="https://connectcentre.ie/">SFI CONNECT</a> as an Associate Investigator and <a href="https://www.advance-crt.ie/">SFI AdvanceCRT</a> as a TCD supervisor.</p>
 </li>
@@ -131,14 +127,15 @@ Assistant Professor, Ph.D. <br />
 <p><div id="Academic Bio"></p>
 <h2>Academic Bio (<a href="Misc\Curriculum_Vitae_Pham.pdf"><font color=red size=+0.5><b>Complete CV</a></b></font><b></font> - <a href="Misc\Curriculum_Vitae_1page_Pham.pdf"><font color=red size=+0.5></b>Short CV</a><b></font></b></font> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5><b>CV of Failure</a></b></font><b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5></b>Photo</a></font></font>)</h2>
 <p>Viet Quoc Pham received the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. 
-He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin, The University of Dublin, Ireland. 
+He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin, Ireland. 
 He is also a Supervisor with the ADVANCE CRT centre and an Associate Investigator at the CONNECT centre, Ireland. 
 Prior to joining TCD, he was in various academic positions with Kyung Hee University, Changwon National University, and Pusan National University. </p>
 <p>He specialises in applying convex optimisation, game theory, and machine learning to analyse and optimise cloud edge computing, wireless networks, and IoT systems. 
 Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). 
 He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. 
 He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, IEEE ATC Best Paper Award in 2022, and Enterprise Ireland Coordination Support Award in 2023. 
-He is an Editor of IEEE Communications Letters, Journal of Network and Computer Applications, and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Internet of Things Magazine, IEEE Transactions on Consumer Electronics, and Computer Communications.</p>
+He is an Editor of IEEE Communications Letters, Journal of Network and Computer Applications, and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Internet of Things Magazine, IEEE Transactions on Consumer Electronics, and Computer Communications.
+He is a senior member of the IEEE.</p>
 <p></div></p>
 <p><div id="About Me"></p>
 <h2>About Me</h2>
@@ -149,7 +146,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-18 09:47:47 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-24 11:54:06 GMT Daylight Time.
 </div>
 </div>
 </td>
