--- a/publication.html
+++ b/publication.html
@@ -122,6 +122,8 @@
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, vol. 22, no. 9, pp. 5296-5312, Sep. 2023.</p>
 </li>
+<li><p>C. de Alwis, P. Kumar, <b>Q.-V. Pham</b>, K. Dev, A. Kalla,  M. Liyanage, and W.-J. Hwang, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2405959522001485">Towards 6G: Key Technological Directions</a>,&rdquo; <i>ICT Express</i>, vol. 9, no. 4, pp. 525-533, Aug. 2023.</p>
+</li>
 <li><p>T.-H. Vu, T.-T. Nguyen, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10106759">A Novel Partial Decode-and-Amplify NOMA-Inspired Relaying Protocol for Uplink Short-Packet Communications</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, vol. 12, no. 7, pp. 1244-1248, Jul. 2023.</p>
 </li>
 <li><p>T. Huynh-The, T. R. Gadekallu, W. Wang, G. Yenduri, P. Ranaweera, <b>Q.-V. Pham</b>, D. B. da Costa, and M. Liyanage, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S0167739X23000493">Blockchain for the Metaverse: A Review</a>,&rdquo; <i>Future Generation Computer Systems</i>, vol. 143, pp. 401-419, Jun. 2023.</p>
@@ -175,7 +177,7 @@
 </li>
 <li><p>S. A. Khowaja, K. Dev, P. Khuwaja, <b>Q.-V. Pham</b>, N. M. F. Qureshi, P. Bellavista, and M. Magarini, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829312">IIFNet: A Fusion based Intelligent Service for Noisy Preamble Detection in 6G</a>,&rdquo; <i>IEEE Network</i>, vol. 36, no. 3, pp. 48-54, May/Jun. 2022.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 71, no. 5, pp. 4977-4990, May 2022.</p>
+<li><p><b>Q.-V. Pham</b>, M. Le, T. Huynh-The, Z. Han, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9709639">Energy-Efficient Federated Learning over UAV-enabled Wireless Powered Communications</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 71, no. 5, pp. 4977-4990, May 2022. [<a href="https://github.com/phamqv/Energy-Efficient-FL-Wireless-Powered-UAV">MATLAB Code</a>]</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and D.-S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/9768809">RF-UAVNet: High-Performance Convolutional Network for RF-based Drone Surveillance Systems</a>,&rdquo; <i>IEEE Access</i>, vol. 10, pp. 49696-49707, May 2022. [<a href="https://github.com/ThienHuynhThe/RF-based-Drone-Surveillance-with-DL">MATLAB Code</a>]</p>
 </li>
@@ -271,7 +273,7 @@
 </li>
 <li><p>Huong-Giang T. Pham, <b>Q.-V. Pham</b>, A. T. Pham, and C. T. Nguyen, &ldquo;<a href="https://ieeexplore.ieee.org/document/9226522">Joint Task Offloading and Resource Management in NOMA-based MEC Systems: A Swarm Intelligence Approach</a>,&rdquo; <i>IEEE Access</i>, vol. 8, pp. 190463-190474, Oct. 2020.</p>
 </li>
-<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Alazab, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9075277">Sum-Rate Maximization for UAV-assisted Visible Light Communications using NOMA: Swarm Intelligence meets Machine Learning</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 7, no. 10, pp. 10375-10387, Oct. 2020.</p>
+<li><p><b>Q.-V. Pham</b>, T. Huynh-The, M. Alazab, J. Zhao, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9075277">Sum-Rate Maximization for UAV-assisted Visible Light Communications using NOMA: Swarm Intelligence meets Machine Learning</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, vol. 7, no. 10, pp. 10375-10387, Oct. 2020. [<a href="https://github.com/phamqv/UAV-NOMA-Visible-Light-Communications-Swarm-Intelligence">MATLAB Code</a>]</p>
 </li>
 <li><p><b>Q.-V. Pham</b>, D. C. Nguyen, T. Huynh-The, W.-J. Hwang, and P. N. Pathirana, &ldquo;<a href="https://ieeexplore.ieee.org/document/9141265">Artificial Intelligence (AI) and Big Data for Coronavirus (COVID-19) Pandemic: A Survey on the State-of-the-Arts</a>,&rdquo; <i>IEEE Access</i>, vol. 8, pp. 130820 -130839, Jul. 2020.</p>
 </li>
@@ -390,7 +392,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-22 09:48:16 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-25 10:56:15 GMT Daylight Time.
 </div>
 </div>
 </td>
