--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ Assistant Professor, Ph.D. <br />
 <ul>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
-<li><p>Phone: (+353) 083-x7y-y3yx, where x = 4 and y = 5.</p>
+<li><p>Phone: (+353) 083-x7y-y3yx, where x = 4 and y = 5</p>
 </li>
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Viet-Pham-46">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
 </li>
@@ -146,7 +146,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-24 11:54:06 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-24 11:58:11 GMT Daylight Time.
 </div>
 </div>
 </td>
