Update the COINLab@TCD website

--- a/COIN/funding.html
+++ b/COIN/funding.html
@@ -73,8 +73,12 @@ Pusan National University</p>
 <p>
 <div id="Sponsors-container">
 <div id="Sponsor">
-<img src="Misc/Sponsors/Enterprise_Ireland.jpg" style="width:250px">    
-<img src="Misc/Sponsors/NRF_logo.png" style="width:250px">    
+<img src="Misc/Sponsors/Enterprise_Ireland.jpg" style="width:250px">   
+<img src="Misc/Sponsors/Trinity_Main_Logo.jpg" style="width:250px"> 
+<img src="Misc/Sponsors/Advance_CRT_Logo.jpeg" style="width:250px">   
+</div>
+<div id="Sponsor">
+<img src="Misc/Sponsors/NRF_logo.png" style="width:250px"> 
 <img src="Misc/Sponsors/BK21_logo.jpg" style="width:250px">    
 <img src="Misc/Sponsors/Nazarbayev_University.png" style="width:250px">    
 </div>
@@ -83,7 +87,7 @@ Pusan National University</p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-08 12:51:48 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-05-25 17:01:34 GMT Daylight Time.
 </div>
 </div>
 </td>
