--- a/COIN/home.html
+++ b/COIN/home.html
@@ -41,7 +41,13 @@
 <p><div id="News"></p>
 <h2>News</h2>
 <ul>
+<li><p>[10/2023] Mengyan Huang was awarded a Chinese government scholarship and joined COIN-Lab as a visiting PhD student. </p>
+</li>
+<li><p>[09/2023] Two PhD students, Tuan Tran and Linh Nguyen, joined COIN-Lab. Congratulations and welcome!</p>
+</li>
 <li><p>[05/2023] Dr. Viet Pham got the Enterprise Ireland Coordination Support Award. </p>
+</li>
+<li><p>[05/2023] Mai Le joined COIN-Lab as a visiting PhD student. Welcome aboard!</p>
 </li>
 <li><p>[04/2023] <a href="Misc\COIN_PhDStudents_Recruitment_2023.pdf"><b>Two-fully funded PhD scholarships</b></a> are available. Please apply and join our COIN research group.</p>
 </li>
@@ -55,12 +61,13 @@
 <h2>About COIN</h2>
 <p>COIN-ers are pioneers in world-leading research into computing, intelligence, and networking. 
 COIN-Lab is led by <a href="../index.html">Professor Viet Quoc Pham</a> in the School of Computer Science and Statistics at Trinity College Dublin. 
-Our research is highly interdisciplinary and exploit an arsenal of tools from network optimization, game theory, machine learning, 
-statistics, and economics to design and build future network systems and improve emerging IT/wireless services and applications.</p>
+Our research is highly interdisciplinary and exploits an arsenal of tools from network optimization, game theory, machine learning, 
+statistics, and economics to design and build future network systems and improve emerging IT/wireless services and applications.
+Our research is sponsored by </p>
 <p><div id="About COIN"></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-05-08 12:22:25 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-09 12:18:00 GMT Daylight Time.
 </div>
 </div>
 </td>
