--- a/publication.html
+++ b/publication.html
@@ -116,11 +116,11 @@
 </li>
 <li><p>N. H. Chu, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, K. T. Phan, W.-J. Hwang, and E. Dutkiewicz, &ldquo;<a href="https://ieeexplore.ieee.org/document/10109100">AI-enabled mm-Waveform Configuration for Autonomous Vehicles with Integrated Communication and Sensing</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
-<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10065563">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, early access.</p>
-</li>
 <li><p>M.-D. Nguyen, S.-M. Lee, <b>Q.-V. Pham</b>, H. T. Dinh, D. N. Nguyen, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9829327">HCFL: A High Compression Approach for Communication-Efficient Federated Learning in Very Large Scale IoT Networks</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, early access. [<a href="https://github.com/skydvn/hcfl-compression">Python Code</a>]</p>
 </li>
 <li><p>Y. M. Saputra, D. N. Nguyen, H. T. Dinh, <b>Q.-V. Pham</b>, E. Dutkiewicz, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9785706">Federated Learning Framework with Straggling Mitigation and Privacy-Awareness for AI-based Mobile Application Services</a>,&rdquo; <i>IEEE Transactions on Mobile Computing</i>, vol. 22, no. 9, pp. 5296-5312, Sep. 2023.</p>
+</li>
+<li><p>N. Iradukunda, <b>Q.-V. Pham</b>, Z. Ding, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/abstract/document/10065563">THz-Enabled UAV Communications using Non-Orthogonal Multiple Access</a>,&rdquo; <i>IEEE Transactions on Vehicular Technology</i>, vol. 72, no. 8, pp. 10977-10981, Aug. 2023.</p>
 </li>
 <li><p>C. de Alwis, P. Kumar, <b>Q.-V. Pham</b>, K. Dev, A. Kalla,  M. Liyanage, and W.-J. Hwang, &ldquo;<a href="https://www.sciencedirect.com/science/article/pii/S2405959522001485">Towards 6G: Key Technological Directions</a>,&rdquo; <i>ICT Express</i>, vol. 9, no. 4, pp. 525-533, Aug. 2023.</p>
 </li>
@@ -392,7 +392,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-25 10:56:15 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-26 19:11:20 GMT Daylight Time.
 </div>
 </div>
 </td>
