--- a/COIN/team.html
+++ b/COIN/team.html
@@ -33,7 +33,7 @@
 </li>
 <li><p>E-mail: x.y@z, where x = viet, y = pham, and z = tcd.ie</p>
 </li>
-<li><p>Phone: (+353) 083-475-5354</p>
+<li><p>Phone: (+353) 083-x7y-y3yx, where x = 4 and y = 5</p>
 </li>
 <li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
 </li>
@@ -202,7 +202,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-07 12:12:50 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-29 09:03:16 GMT Daylight Time.
 </div>
 </div>
 </td>
