team, index, and CVs

--- a/COIN/team.html
+++ b/COIN/team.html
@@ -50,14 +50,14 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <p><div id="Students"></p>
 <h2>Students</h2>
 <ul>
-<li><p>PhD Student 1</p>
+<li><p>Linh Thanh Nguyen</p>
 <ul>
 <li><p>PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/09 - Present.</p>
 </li>
 <li><p>Research Topic: Blockchain-enabled intelligent security and privacy preservation for IoT data marketplace. </p>
 </li></ul>
 </li>
-<li><p>PhD Student 2</p>
+<li><p>Tuan Van tran</p>
 <ul>
 <li><p>PhD Student, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, 2023/09 - Present.</p>
 </li>
@@ -202,7 +202,7 @@ and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-29 09:03:16 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-09-01 09:52:47 GMT Daylight Time.
 </div>
 </div>
 </td>
