--- a/publication.html
+++ b/publication.html
@@ -95,7 +95,7 @@
 </li>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, T.-T. Nguyen, D. B. da Costa, and S. Kim, &ldquo;<a href="">Enhancing RIS-Aided Two-Way Full-Duplex Communication with Non-Orthogonal Multiple Access</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>.</p>
 </li>
-<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">Optimization of Task Offloading for Microservice-enhanced Vehicular Edge Computing</a>,&rdquo; under review, <i>IEEE Communications Letters</i>.</p>
+<li><p>L. N. T. Huynh, <b>Q.-V. Pham</b>, Y. K. Tun, M. D. Hossain, and E.-N. Huh, &ldquo;<a href="">A Block-structured Optimization Approach for Data Sensing and Computing in Vehicle-assisted Edge Computing Networks</a>,&rdquo; under review, <i>IEEE Sensor Journal</i>.</p>
 </li>
 <li><p>M. Le, Q. V. Do, Z. Han, and W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Resource Allocation in THz-NOMA-enabled HAP Systems Based on Deep Reinforcement Learning</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>.</p>
 </li>
@@ -318,6 +318,8 @@
 <ol>
 <li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Performance Analysis of RSMA-aided UAV-to-Ground Communications</a>,&rdquo; <i>IEEE Global Communications Conference (GLOBECOM)</i>, Kuala Lumpur, Malaysia, 2023.</p>
 </li>
+<li><p>Z. Zhao, Z. Yang, <b>Q.-V. Pham</b>, Q. Yang, and Z. Zhang, &ldquo;<a href="">Semantic Communication with Probability Graph: A Joint Communication and Computation Design</a>,&rdquo; in <i>IEEE 98th Vehicular Technology Conference: VTC2023-Fall</i>, Hong Kong, 2023.</p>
+</li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-H. Vu, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10208054">Intelligent Spectrum Sensing with ConvNet for 5G and LTE Signals Identification</a>,&rdquo; <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
 </li>
 <li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10208038">An Efficient Deep Network for Modulation Classification in Impaired MIMO-OFDM Systems</a>,&rdquo;<i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
@@ -392,7 +394,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-26 19:11:20 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-09-01 10:16:05 GMT Daylight Time.
 </div>
 </div>
 </td>
