--- a/index.html
+++ b/index.html
@@ -126,16 +126,16 @@ Assistant Professor, Ph.D. <br />
 <p></div></p>
 <p><div id="Academic Bio"></p>
 <h2>Academic Bio (<a href="Misc\Curriculum_Vitae_Pham.pdf"><font color=red size=+0.5><b>Complete CV</a></b></font><b></font> - <a href="Misc\Curriculum_Vitae_1page_Pham.pdf"><font color=red size=+0.5></b>Short CV</a><b></font></b></font> - <a href="Misc\Curriculum_Vitae_Failure_Pham.pdf"><font color=red size=+0.5><b>CV of Failure</a></b></font><b></font> - <a href="Misc\Portrait_Viet.jpg"><font color=red size=+0.5></b>Photo</a></font></font>)</h2>
-<p>Viet Quoc Pham received the Ph.D. degree in telecommunications engineering from Inje University, Korea, in 2017. 
-He is currently an Assistant Professor in Networks and Distributed Systems with the School of Computer Science and Statistics, Trinity College Dublin, Ireland. 
-He is also a Supervisor with the ADVANCE CRT centre and an Associate Investigator at the CONNECT centre, Ireland. 
-Prior to joining TCD, he was in various academic positions with Kyung Hee University, Changwon National University, and Pusan National University. </p>
-<p>He specialises in applying convex optimisation, game theory, and machine learning to analyse and optimise cloud edge computing, wireless networks, and IoT systems. 
-Specifically, his research focuses on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). 
-He was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. 
-He was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, IEEE ATC Best Paper Award in 2022, and Enterprise Ireland Coordination Support Award in 2023. 
-He is an Editor of IEEE Communications Letters, Journal of Network and Computer Applications, and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Internet of Things Magazine, IEEE Transactions on Consumer Electronics, and Computer Communications.
-He is a senior member of the IEEE.</p>
+<p>I am currently an Assistant Professor in the Networks and Distributed Systems Discipline at the School of Computer Science and Statistics, <a href="https://www.tcd.ie/">Trinity College Dublin</a>, Ireland. 
+I am also a Supervisor with the <a href="https://www.advance-crt.ie/">ADVANCE CRT centre</a> and an Associate Investigator at the <a href="https://connectcentre.ie/">CONNECT centre</a>, Ireland. 
+Prior to joining TCD, I was in various academic positions with <a href="https://www.khu.ac.kr/">Kyung Hee University</a>, <a href="https://www.changwon.ac.kr/">Changwon National University</a>, and <a href="https://www.pusan.ac.kr/">Pusan National University</a>. 
+I received the BSc degree and Ph.D. degree, both in telecommunications, from <a href="https://hust.edu.vn">Hanoi University of Science and Technology</a> in 2013 and <a href="https://www.inje.ac.kr">Inje University</a> in 2017, respectively. </p>
+<p>I specialise in applying convex optimisation, game theory, and machine learning to analyse and optimise cloud edge computing, wireless networks, and IoT systems. 
+Specifically, I lead the <a href="https://www.scss.tcd.ie/viet.pham/COIN/home.html">COIN Lab</a> and focus on three main thrusts, including computing (e.g., edge computing, aerial computing, edge of things, and edge AI), intelligence (e.g., wireless AI and federated learning), and networking (e.g., 6G wireless, IoT, intelligent surfaces, metaverse, and blockchain). 
+I was granted the Korea NRF funding for outstanding young researchers for the term 2019-2024. 
+I was a recipient of the Best Ph.D. Dissertation Award from Inje University in 2017, Top Reviewer Award from the IEEE Transactions on Vehicular Technology in 2020, and Golden Globe Award from the Ministry of Science and Technology, Vietnam, in 2021, IEEE ATC Best Paper Award in 2022, and Enterprise Ireland Coordination Support Award in 2023. 
+I am an Editor of IEEE Communications Letters, Journal of Network and Computer Applications, and Scientific Reports, and a Lead/Guest Editor of the IEEE Internet of Things Journal, IEEE Internet of Things Magazine, IEEE Transactions on Consumer Electronics, and Computer Communications.
+I am a senior member of the IEEE.</p>
 <p></div></p>
 <p><div id="About Me"></p>
 <h2>About Me</h2>
@@ -146,7 +146,7 @@ I very often have problems answering the &ldquo;What is your correct name?&rdquo
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-24 11:58:11 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-08-29 09:48:21 GMT Daylight Time.
 </div>
 </div>
 </td>
