--- a/publication.html
+++ b/publication.html
@@ -79,8 +79,6 @@
 </li>
 <li><p>T. Huynh-The, N. C. Luong, H. Phan, D. B. da Costa, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Improved Waveform Classification for Integrated Radar-Communication 6G Systems via Convolutional Neural Networks</a>,&rdquo; under review, <i>IEEE Transactions on Vehicular Technology</i>, 2023.</p>
 </li>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Rate-Splitting Multiple Access-Assisted THz-Based Short-Packet Communications</a>,&rdquo; under review, <i>IEEE Wireless Communications Letters</i>, 2023.  </p>
-</li>
 <li><p>M. Le, H. T. Dinh, D. N. Nguyen, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="https://arxiv.org/abs/2308.04953">Wirelessly Powered Federated Learning Networks: Joint Power Transfer, Data Sensing, Model Training, and Resource Allocation</a>,&rdquo; under review, <i>IEEE Internet of Things Journal</i>.</p>
 </li>
 <li><p>M. Le, T. Huynh-The, T. Do-Duy, T.-H. Vu, W.-J. Hwang, and <b>Q.-V. Pham</b>, &ldquo;<a href="">Applications of Distributed Machine Learning for the Internet-of-Things: A Comprehensive Survey</a>,&rdquo; under review, <i>IEEE Communications Surveys and Tutorials</i>.</p>
@@ -106,6 +104,8 @@
 <p><div id="2023 and Early Access"></p>
 <h2>2023 and Early Access</h2>
 <ol>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="https://dx.doi.org/10.1109/LWC.2023.3315751">Rate-Splitting Multiple Access-Assisted THz-Based Short-Packet Communications</a>,&rdquo; <i>IEEE Wireless Communications Letters</i>, 2023.</p>
+</li>
 <li><p>A. K. Bashir, N. Victor, S. Bhattacharya, T. Huynh-The, R. Chengoden, G. Yenduri, P. P. R. Maddikunta, <b>Q.-V. Pham</b>, T. R. Gadekallu, and M. Liyanage, &ldquo;<a href="https://ieeexplore.ieee.org/document/10215363">Federated Learning for the Healthcare Metaverse: Concepts, Applications, Challenges and Future Directions</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
 </li>
 <li><p>S. Pakravan, J.-Y. Chouinard, X. Li, M. Zeng, W. Hao, <b>Q.-V. Pham</b>, and O. A. Dobre, &ldquo;<a href="https://dx.doi.org/10.1109/JIOT.2023.3296319">Physical Layer Security for NOMA Systems: Requirements, Issues, and Recommendations</a>,&rdquo; <i>IEEE Internet of Things Journal</i>, early access.</p>
@@ -316,21 +316,19 @@
 <p><div id="Conferences"></p>
 <h2>Conferences</h2>
 <ol>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Performance Analysis of RSMA-aided UAV-to-Ground Communications</a>,&rdquo; <i>IEEE Global Communications Conference (GLOBECOM)</i>, Kuala Lumpur, Malaysia, 2023.</p>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, and S. Kim, &ldquo;<a href="">Performance Analysis of RSMA-aided UAV-to-Ground Communications</a>,&rdquo; in <i>IEEE Global Communications Conference (GLOBECOM)</i>, Kuala Lumpur, Malaysia, Dec. 2023.</p>
 </li>
-<li><p>Z. Zhao, Z. Yang, <b>Q.-V. Pham</b>, Q. Yang, and Z. Zhang, &ldquo;<a href="">Semantic Communication with Probability Graph: A Joint Communication and Computation Design</a>,&rdquo; in <i>IEEE 98th Vehicular Technology Conference: VTC2023-Fall</i>, Hong Kong, 2023.</p>
+<li><p>Z. Zhao, Z. Yang, <b>Q.-V. Pham</b>, Q. Yang, and Z. Zhang, &ldquo;<a href="">Semantic Communication with Probability Graph: A Joint Communication and Computation Design</a>,&rdquo; in <i>IEEE 98th Vehicular Technology Conference: VTC2023-Fall</i>, Hong Kong, Oct. 2023.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-H. Vu, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10208054">Intelligent Spectrum Sensing with ConvNet for 5G and LTE Signals Identification</a>,&rdquo; <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-H. Vu, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10208054">Intelligent Spectrum Sensing with ConvNet for 5G and LTE Signals Identification</a>,&rdquo; in <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
 </li>
-<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10208038">An Efficient Deep Network for Modulation Classification in Impaired MIMO-OFDM Systems</a>,&rdquo;<i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
+<li><p>T. Huynh-The, <b>Q.-V. Pham</b>, T.-V. Nguyen, D. B. da Costa, and V.-P. Hoang, &ldquo;<a href="https://ieeexplore.ieee.org/document/10208038">An Efficient Deep Network for Modulation Classification in Impaired MIMO-OFDM Systems</a>, in &rdquo;<i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
 </li>
-<li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, T. Huynh-The, D. B. da Costa, V. N. Q. Bao, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10207980">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
+<li><p>T.-H. Vu, K.-T. Nguyen, <b>Q.-V. Pham</b>, T. Huynh-The, D. B. da Costa, V. N. Q. Bao, and S. Kim, &ldquo;<a href="https://ieeexplore.ieee.org/document/10207980">Outage Performance of THz-aided NOMA Systems with Spherical Stochastic Model</a>,&rdquo; in <i>IEEE Statistical Signal Processing Workshop (SSP)</i>, Hanoi, Vietnam, Jul. 2023.</p>
 </li>
-<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, and V. J. Reddi, &ldquo;<a href="http://dx.doi.org/10.1007/978-3-031-36021-3_30">Solving Complex Sequential Decision-Making Problems by Deep Reinforcement Learning with Heuristic Rules</a>,&rdquo; <i>International Conference on Computational Science (ICCS)</i>, Prague, Czech Republic, Jul. 2023.</p>
+<li><p>T. T. Nguyen, C. M. Nguyen, T. Huynh-The, <b>Q.-V. Pham</b>, Q. V. H. Nguyen, I. Razzak, and V. J. Reddi, &ldquo;<a href="http://dx.doi.org/10.1007/978-3-031-36021-3_30">Solving Complex Sequential Decision-Making Problems by Deep Reinforcement Learning with Heuristic Rules</a>,&rdquo; in <i>International Conference on Computational Science (ICCS)</i>, Prague, Czech Republic, Jul. 2023.</p>
 </li>
-<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
-</li>
-<li><p>X.-T. Nguyen, M.-D. Nguyen, <b>Q.-V. Pham</b>, V.-Q. Do, and W.-J. Hwang, "<a href="https://arxiv.org/abs/2206.06976">Resource Allocation for Compression-aided Federated Learning with High Distortion Rate</a>,” <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
+<li><p>T.-H. Vu, <b>Q.-V. Pham</b>, D. B. da Costa, M. Debbah, and S. Kim, &ldquo;<a href="">Physical-Layer Security in Short-Packet NOMA Systems with Untrusted Near User</a>,&rdquo; in <i>IEEE International Conference on Communications (ICC)</i>, Rome, Italy, May 2023.</p>
 </li>
 <li><p>M.-D. Nguyen, X.-T. Nguyen, H.-S. Luong, <b>Q.-V. Pham</b>, Q. V. Do, and W.-J. Hwang, &ldquo;<a href="https://ieeexplore.ieee.org/document/9943034/">FFD: A Full-Stack Federated Distillation method for Heterogeneous Massive IoT Networks</a>,&rdquo; in <i>IEEE International Conference on Advanced Technology for Communications (ATC)</i>, Hanoi, Vietnam, Oct. 2022.</p>
 </li>
@@ -394,7 +392,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-09-01 10:16:05 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-09-14 09:37:42 GMT Daylight Time.
 </div>
 </div>
 </td>
