--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <img src="Misc\Portrait_Viet.jpg" alt="" width="180px" height="230px" />&nbsp;</td>
 <td align="left"><p><a href="mailto:viet.pham@tcd.ie">Viet Quoc Pham</a> <br />
 Assistant Professor, Ph.D. <br /> 
-<a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a> (SCSS) <br /> 
+<a href="https://www.scss.tcd.ie/">School of Computer Science and Statistics</a> <br /> 
 <a href="https://www.tcd.ie/">Trinity College Dublin</a> (TCD), The University of Dublin</p>
 <p><div id="Contacts"></p>
 <h2>Contacts</h2>
@@ -43,7 +43,7 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Viet-Pham-46">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
 </li>
-<li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin, Ireland</p>
+<li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin</p>
 </li>
 </ul>
 </td></tr></table>
@@ -65,7 +65,7 @@ Assistant Professor, Ph.D. <br />
 <ul>
 <li><p><a href="./COIN/opening.html"><font color=red size=+0.5><b>Openning!</b></font></a> Applicants are invited to join my COIN-Lab@TCD under Postgraduate Scholarship and Postdoctoral Fellowship Programs of the Government of Ireland. </p>
 </li>
-<li><p>[08/2023] I have been appointed as the Demonstrator and Teaching Assistant Director of TCD SCSS.</p>
+<li><p>[08/2023] I have been appointed as the Demonstrator and Teaching Assistant Director.</p>
 </li>
 <li><p>[07/2023] <font color=red size=+0.5>Hot!</font> I have been invited to join the editorial board of the IEEE Communications Letters.</p>
 </li>
@@ -140,13 +140,13 @@ I am a senior member of the IEEE.</p>
 <p><div id="About Me"></p>
 <h2>About Me</h2>
 <p>My full name is Viet Quoc Pham, which I prefer to be called Viet. 
-In Vietnamese, my last name is Pham and my first name is Quoc Viet. 
-I use Quoc-Viet Pham as my author name in academic articles. 
+In Vietnamese, my first, middile, and last name is Viet, Quoc, and Pham, respectively,
+I use Quoc-Viet Pham as my author name in academic articles. Also, my TCD username is phamq, which is created based on my middle and last names. 
 I very often have problems answering the &ldquo;What is your correct name?&rdquo; question :)</p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-08-29 09:48:21 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-09-15 09:25:38 GMT Daylight Time.
 </div>
 </div>
 </td>
