Update the name description and publication

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@ Assistant Professor, Ph.D. <br />
 </li>
 <li><p>Phone: (+353) 083-x7y-y3yx, where x = 4 and y = 5</p>
 </li>
-<li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, <a href="https://www.researchgate.net/profile/Viet-Pham-46">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, <a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, and <a href="https://www.webofscience.com/wos/author/record/1818422">Publons</a></p>
+<li><p>Profiles: <a href="https://scholar.google.com/citations?hl=en&amp;user=zKX-0LIAAAAJ&amp;view_op=list_works&amp;sortby=pubdate">Google Scholar</a>, 
+<a href="https://www.researchgate.net/profile/Viet-Pham-46">ResearchGate</a>, <a href="https://www.linkedin.com/in/pqv90/">LinkedIn</a>, 
+<a href="https://orcid.org/0000-0002-9485-9216">ORCID</a>, <a href="https://www.scopus.com/authid/detail.uri?authorId=56884048100">Scopus</a>, 
+and <a href="https://www.webofscience.com/wos/author/record/1818422">Web of Science</a></p>
 </li>
 <li><p>Office: 4.10, CONNECT Centre, Dunlop Oriel House, 34 Westland Row, 8PRX+RV Dublin</p>
 </li>
@@ -140,13 +143,13 @@ I am a senior member of the IEEE.</p>
 <p><div id="About Me"></p>
 <h2>About Me</h2>
 <p>My full name is Viet Quoc Pham, which I prefer to be called Viet. 
-In Vietnamese, my first, middile, and last name is Viet, Quoc, and Pham, respectively,
+In Vietnamese, my first, middle, and last names are Viet, Quoc, and Pham, respectively.
 I use Quoc-Viet Pham as my author name in academic articles. Also, my TCD username is phamq, which is created based on my middle and last names. 
 I very often have problems answering the &ldquo;What is your correct name?&rdquo; question :)</p>
 <p></div></p>
 <div id="footer">
 <div id="footer-text">
-Copyright @2023 COIN-TCD. Last Updated: 2023-09-15 09:25:38 GMT Daylight Time.
+Copyright @2023 COIN-TCD. Last Updated: 2023-09-23 15:11:38 GMT Daylight Time.
 </div>
 </div>
 </td>
